// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical On Demand Audio Page A11y I can see the skip to content link 1`] = `"مطلب ته ورشئ"`;

exports[`Canonical On Demand Audio Page Analytics ATI tracking pixel excluding src 1`] = `
<img
  alt=""
  height="1px"
  style="position:absolute"
  width="1px"
/>
`;

exports[`Canonical On Demand Audio Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/"`;

exports[`Canonical On Demand Audio Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "68",
  },
  {
    "p": "pashto.bbc_pashto_radio.programmes.p0340v0j.page",
  },
  {
    "x1": "[urn:bbc:pips:w3ct7cln]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-pashto]",
  },
  {
    "x4": "[ps]",
  },
  {
    "x7": "[player-episode]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[ماښامنۍ%20خپرونه%20-%20BBC%20News%20پښتو]",
  },
]
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, پښتو",
  "url": "/pashto",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 2`] = `
{
  "text": "ولې تاسې پر بي بي سي خبرونو باور کولی شئ",
  "url": "https://www.bbc.com/pashto/institutional-49283007",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 3`] = `
{
  "text": "د کارولو شرايط",
  "url": "https://www.bbc.com/pashto/institutional-37620701",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 4`] = `
{
  "text": "د بي بي سي‌ په اړه",
  "url": "https://www.bbc.com/pashto/institutional-37622761",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 5`] = `
{
  "text": "د محرميت تگلاره",
  "url": "https://www.bbc.com/pashto/institutional-37622762",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 7`] = `
{
  "text": "زموږ سره اړیکي",
  "url": "https://www.bbc.co.uk/pashto/send/u50853533",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 8`] = `
{
  "text": "نورې ژبې",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical On Demand Audio Page Footer Anchors should match text and url 9`] = `
{
  "text": "د نورو ویبپاڼو لینکولو په اړه زموږ تګلاره.",
  "url": "https://www.bbc.co.uk/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`Canonical On Demand Audio Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/pashto"`;

exports[`Canonical On Demand Audio Page Footer Paragraphs should match text 1`] = `"© 2025 بي بي سي. بي بي‌ سي‌ د نورو ویبپاڼو د محتوا مسوله نه ده. د نورو ویبپاڼو لینکولو په اړه زموږ تګلاره."`;

exports[`Canonical On Demand Audio Page Header I can see the branding 1`] = `"BBC News, پښتو"`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 1`] = `
{
  "text": "کور پاڼه",
  "url": "/pashto",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 2`] = `
{
  "text": "افغانستان",
  "url": "/pashto/topics/cr50y57xj52t",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 3`] = `
{
  "text": "پښتونخوا",
  "url": "/pashto/topics/cz74k7wy49jt",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 4`] = `
{
  "text": "نړۍ",
  "url": "/pashto/topics/cxe2wdp2dv3t",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 5`] = `
{
  "text": "ښځې",
  "url": "/pashto/topics/cr50y5rq23gt",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 6`] = `
{
  "text": "لوبې",
  "url": "/pashto/topics/cr50y59q860t",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 7`] = `
{
  "text": "اقتصاد او سوداګري",
  "url": "/pashto/topics/cy087kqvl1yt",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 8`] = `
{
  "text": "ساینس او ټکنالوژي",
  "url": "/pashto/topics/ckgrvled11kt",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 9`] = `
{
  "text": "هنر او ادب",
  "url": "/pashto/topics/c8xqkd91knnt",
}
`;

exports[`Canonical On Demand Audio Page Header Navigation link should match text and url 10`] = `
{
  "text": "راډیویي خپرونې",
  "url": "/pashto/topics/c9xz1ekw79nt",
}
`;

exports[`Canonical On Demand Audio Page I can see the brand title 1`] = `"ماښامنۍ خپرونه"`;

exports[`Canonical On Demand Audio Page I can see the episode summary 1`] = `"ماښامنۍ خبري راډيويي خپرونه"`;

exports[`Canonical On Demand Audio Page I can see the episode title 1`] = `"Current Affairs Evening Programme "`;

exports[`Canonical On Demand Audio Page I can see the hero image 1`] = `"https://ichef.bbci.co.uk/images/ic/256x256/p0k5sc1d.png.webp"`;

exports[`Canonical On Demand Audio Page Main heading should match text 1`] = `"ماښامنۍ خپرونه, Current Affairs Evening Programme "`;

exports[`Canonical On Demand Audio Page Media Loader renders a valid container 1`] = `
<figure
  class="bbc-ucozvf"
  data-e2e="media-loader__container"
>
  <div
    class="bbc-1eq7znh"
    data-e2e="media-player"
  />
</figure>
`;

exports[`Canonical On Demand Audio Page Recent Episodes List items should match text and url 1`] = `
{
  "text": "غږ, ماښامنۍ خپرونه, Current Affairs Evening Programme ,  موده ۲۹،۳۰  موده ۲۹:۳۰۲۴ نومبر ۲۰۲۴",
  "url": "/pashto/bbc_pashto_radio/w3ct7cnw",
}
`;

exports[`Canonical On Demand Audio Page Recent Episodes List items should match text and url 2`] = `
{
  "text": "غږ, ماښامنۍ خپرونه, Current Affairs Evening Programme ,  موده ۲۹،۳۰  موده ۲۹:۳۰۲۳ نومبر ۲۰۲۴",
  "url": "/pashto/bbc_pashto_radio/w3ct7cmr",
}
`;

exports[`Canonical On Demand Audio Page Recent Episodes List items should match text and url 3`] = `
{
  "text": "غږ, ماښامنۍ خپرونه, Current Affairs Evening Programme ,  موده ۲۹،۳۰  موده ۲۹:۳۰۲۲ نومبر ۲۰۲۴",
  "url": "/pashto/bbc_pashto_radio/w3ct7ckh",
}
`;

exports[`Canonical On Demand Audio Page Recent Episodes List items should match text and url 4`] = `
{
  "text": "غږ, ماښامنۍ خپرونه, Current Affairs Evening Programme ,  موده ۲۹،۳۰  موده ۲۹:۳۰۲۱ نومبر ۲۰۲۴",
  "url": "/pashto/bbc_pashto_radio/w3ct7cq0",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7080/pashto/images/icons/icon-192x192.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "72x72",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-72x72.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "96x96",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-96x96.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "128x128",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-128x128.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "144x144",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-144x144.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 6`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-152x152.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 7`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-180x180.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 8`] = `
{
  "sizes": "192x192",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-192x192.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 9`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-384x384.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Apple Touch Icon should match attributes 10`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/pashto/images/icons/icon-512x512.png",
}
`;

exports[`Canonical On Demand Audio Page SEO Canonical link 1`] = `"http://localhost:7080/pashto/bbc_pashto_radio/p0340v0j"`;

exports[`Canonical On Demand Audio Page SEO Dir attribute 1`] = `"rtl"`;

exports[`Canonical On Demand Audio Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical On Demand Audio Page SEO Heading level 1 1`] = `"ماښامنۍ خپرونه, Current Affairs Evening Programme "`;

exports[`Canonical On Demand Audio Page SEO Lang attribute 1`] = `"ps"`;

exports[`Canonical On Demand Audio Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "WebPage",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ps",
        "name": "Pashto",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7080/pashto/bbc_pashto_radio/p0340v0j",
        "@type": "WebPage",
        "name": "Current Affairs Evening Programme  - ماښامنۍ خپرونه - Pashto",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png",
          "width": 1024,
        },
        "name": "BBC News پښتو",
        "publishingPrinciples": "https://www.bbc.com/pashto/institutional-49283007",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/pashto.png",
      "url": "http://localhost:7080/pashto/bbc_pashto_radio/p0340v0j",
    },
    {
      "@type": "AudioObject",
      "description": "ماښامنۍ خبري راډيويي خپرونه",
      "duration": "PT29M30S",
      "name": "ماښامنۍ خپرونه",
      "thumbnailUrl": "https://ichef.bbci.co.uk/images/ic/1024x576/p0k5sc1d.png",
      "uploadDate": "2024-11-25T00:00:00.000Z",
    },
  ],
}
`;

exports[`Canonical On Demand Audio Page SEO OG description 1`] = `"ماښامنۍ خبري راډيويي خپرونه"`;

exports[`Canonical On Demand Audio Page SEO OG image 1`] = `"https://ichef.bbci.co.uk/images/ic/400x400/p0k5sc1d.png"`;

exports[`Canonical On Demand Audio Page SEO OG image alt 1`] = `"BBC News پښتو"`;

exports[`Canonical On Demand Audio Page SEO OG locale 1`] = `"ps"`;

exports[`Canonical On Demand Audio Page SEO OG site name 1`] = `"BBC News پښتو"`;

exports[`Canonical On Demand Audio Page SEO OG title 1`] = `"Current Affairs Evening Programme  - ماښامنۍ خپرونه - Pashto - BBC News پښتو"`;

exports[`Canonical On Demand Audio Page SEO OG type 1`] = `"website"`;

exports[`Canonical On Demand Audio Page SEO OG url 1`] = `"http://localhost:7080/pashto/bbc_pashto_radio/p0340v0j"`;

exports[`Canonical On Demand Audio Page SEO Page title 1`] = `"Current Affairs Evening Programme  - ماښامنۍ خپرونه - Pashto - BBC News پښتو"`;

exports[`Canonical On Demand Audio Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical On Demand Audio Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical On Demand Audio Page SEO Twitter creator 1`] = `"@bbcpashto"`;

exports[`Canonical On Demand Audio Page SEO Twitter description 1`] = `"ماښامنۍ خبري راډيويي خپرونه"`;

exports[`Canonical On Demand Audio Page SEO Twitter image alt 1`] = `"BBC News پښتو"`;

exports[`Canonical On Demand Audio Page SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/images/ic/400x400/p0k5sc1d.png"`;

exports[`Canonical On Demand Audio Page SEO Twitter site 1`] = `"@bbcpashto"`;

exports[`Canonical On Demand Audio Page SEO Twitter title 1`] = `"Current Affairs Evening Programme  - ماښامنۍ خپرونه - Pashto - BBC News پښتو"`;

exports[`Canonical On Demand Audio Page a11y Assistive technology reads the brand and episode title as the headline 1`] = `"ماښامنۍ خپرونه, Current Affairs Evening Programme "`;
